[gd_scene load_steps=15 format=2]

[ext_resource path="res://Menu/Pause.gd" type="Script" id=1]
[ext_resource path="res://Grafika_menu/pozadie_bez_pasiku.png" type="Texture" id=2]
[ext_resource path="res://Fonty/Font.otf" type="DynamicFontData" id=3]
[ext_resource path="res://Menu/SetingsMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://music/music.tscn" type="PackedScene" id=6]

[sub_resource type="Theme" id=1]

[sub_resource type="DynamicFont" id=2]
size = 90
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=3]

[sub_resource type="DynamicFont" id=4]
size = 54
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 0, 0, 1 )
border_color = Color( 1, 1, 1, 1 )
border_blend = true
corner_detail = 15
expand_margin_left = 3.0
expand_margin_right = 3.0
expand_margin_top = 3.0
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 1, 1, 1 )
expand_margin_left = 8.0
expand_margin_right = 8.0
expand_margin_top = 8.0
expand_margin_bottom = 8.0

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 1, 0, 0, 1 )
border_color = Color( 1, 1, 1, 1 )
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_top = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 1, 1, 1, 1 )
expand_margin_left = 8.0
expand_margin_right = 8.0
expand_margin_top = 8.0
expand_margin_bottom = 8.0

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 1, 1, 1, 1 )

[node name="Pause_Menu" type="Control"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="PozadieBezPasiku" type="Sprite" parent="."]
position = Vector2( 960, 540 )
scale = Vector2( 0.443111, 0.518483 )
texture = ExtResource( 2 )

[node name="Title" type="Label" parent="."]
margin_left = 621.5
margin_top = 292.5
margin_right = 1298.5
margin_bottom = 389.5
theme = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "GAME PAUSED"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -168.5
margin_top = -247.5
margin_right = 168.5
margin_bottom = 247.5

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
margin_right = 337.0
margin_bottom = 150.0
rect_min_size = Vector2( 100, 150 )

[node name="PokracovatTlacidlo" type="Button" parent="VBoxContainer"]
margin_top = 154.0
margin_right = 325.0
margin_bottom = 218.0
focus_neighbour_top = NodePath("../UkoncitTlacidlo2")
size_flags_horizontal = 0
theme = SubResource( 3 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 6 )
text = "  Resume  "

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer"]
margin_top = 222.0
margin_right = 337.0
margin_bottom = 242.0
rect_min_size = Vector2( 50, 20 )

[node name="SpatNaMainMenuTlacidlo" type="Button" parent="VBoxContainer"]
margin_top = 246.0
margin_right = 329.0
margin_bottom = 310.0
size_flags_horizontal = 0
theme = SubResource( 3 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 6 )
text = "main menu"

[node name="MarginContainer5" type="MarginContainer" parent="VBoxContainer"]
margin_top = 314.0
margin_right = 337.0
margin_bottom = 334.0
rect_min_size = Vector2( 50, 20 )

[node name="NastaveniaTlacidlo" type="Button" parent="VBoxContainer"]
margin_top = 338.0
margin_right = 330.0
margin_bottom = 402.0
size_flags_horizontal = 0
theme = SubResource( 3 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 6 )
text = " SETTINGS "

[node name="MarginContainer4" type="MarginContainer" parent="VBoxContainer"]
margin_top = 406.0
margin_right = 337.0
margin_bottom = 426.0
rect_min_size = Vector2( 50, 20 )

[node name="UkoncitTlacidlo2" type="Button" parent="VBoxContainer"]
margin_top = 430.0
margin_right = 325.0
margin_bottom = 494.0
focus_neighbour_bottom = NodePath("../PokracovatTlacidlo")
size_flags_horizontal = 0
theme = SubResource( 3 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/hover = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
text = "QUIT GAME"

[node name="SettingsMenu" parent="." instance=ExtResource( 4 )]

[node name="Music" parent="." instance=ExtResource( 6 )]
volume_db = 0.0

[connection signal="pressed" from="VBoxContainer/PokracovatTlacidlo" to="." method="_on_PokracovatTlacidlo_pressed"]
[connection signal="pressed" from="VBoxContainer/SpatNaMainMenuTlacidlo" to="." method="_on_SpatNaMainMenuTlacidlo_pressed"]
[connection signal="pressed" from="VBoxContainer/NastaveniaTlacidlo" to="." method="_on_NastaveniaTlacidlo_pressed"]
[connection signal="pressed" from="VBoxContainer/UkoncitTlacidlo2" to="." method="_on_UkoncitTlacidlo2_pressed"]
